--- a/Surge Pro.conf
+++ b/Surge Pro.conf
@@ -9,8 +9,10 @@ loglevel = notify
 
 # > Internet 测试 URL
 internet-test-url = http://wifi.vivo.com.cn/generate_204
+
 # > 代理测速 URL
 proxy-test-url = http://cp.cloudflare.com/generate_204
+
 # > 测速超时(秒)
 test-timeout = 2
 
@@ -27,12 +29,12 @@ geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release
 🚀 节点选择 = select, ♻ 自动选择, policy-path=[订阅地址], update-interval=0
 ♻ 自动选择 = url-test, policy-path=[订阅地址], update-interval=0, url=http://cp.cloudflare.com/generate_204, interval=300, tolerance=50
 🍎 Apple = select, DIRECT, 🚀 节点选择
-📺 Bilibili = select, 🚀 节点选择, DIRECT
+📺 Bilibili = select, DIRECT, 🚀 节点选择
 TikTok = select, 🚀 节点选择
 🎥 Netflix = select, 🚀 节点选择
 Speedtest = select, DIRECT, 🚀 节点选择
 🌍 国际媒体 = select, 🚀 节点选择, ♻ 自动选择
-🛑 广告拦截 = select, REJECT, DIRECT
+🛑 广告拦截 = select, DIRECT, REJECT
 🐟 漏网之鱼 = select, DIRECT, 🚀 节点选择
 🇭🇰 香港节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=香港, no-alert=0, hidden=0
 🇯🇵 日本节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=日本, no-alert=0, hidden=0
@@ -56,14 +58,13 @@ FINAL,🐟 漏网之鱼
 # !name=Panels
 # !desc=信息面板模块
 [Panel]
-SurgePro_ReloadProfile = script-name=SurgePro_ReloadProfile,title=启动时长,content=请刷新,update-interval=1
-netflix_check = script-name=netflix_check,title=Netflix 解锁检测,content=请刷新,update-interval=36000
-disney_check = script-name=disney_check,title=Disney+ 解锁检测,content=请刷新,update-interval=36000
+# 启动时长
+SurgePro_ReloadProfile = type=generic,timeout=10,script-path=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/PanelScripts/surgepro_reloadprofile.js
+# 流媒体解锁检测
+stream-all = type=generic, timeout=15, script-path=https://raw.githubusercontent.com/LucaLin233/Luca_Conf/main/Surge/JS/stream-all.js
 
 [Script]
 # 启动时长
-SurgePro_ReloadProfile = type=generic,timeout=10,script-path=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/PanelScripts/surgepro_reloadprofile.js
-# Netflix检测
-netflix_check = type=generic,timeout=5,script-path=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/PanelScripts/netflix_check.js
-# Disney+检测
-disney_check = type=generic,timeout=5,script-path=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/PanelScripts/disney_check.js
+SurgePro_ReloadProfile = script-name=SurgePro_ReloadProfile,title=启动时长,content=请刷新,update-interval=1
+# 流媒体解锁检测
+stream-all = script-name=stream-all, title="流媒体解锁检测", content="请刷新面板", update-interval=36000
