--- a/Surge Pro.conf
+++ b/Surge Pro.conf
@@ -4,7 +4,7 @@
 # 技术社区 - https://community.nssurge.com
 
 [General]
-# 日志等级
+# > 日志级别
 loglevel = notify
 
 # > Internet 测试 URL
@@ -19,8 +19,10 @@ test-timeout = 2
 # > 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, passenger.t3go.cn
 
-# DNS 服务器
-dns-server = 119.29.29.29, 223.5.5.5
+# > DNS 服务器 (如无必要不建议使用 DNS over HTTPS)
+dns-server = 119.29.29.29,system
+# > 从 /etc/hosts 读取 DNS 记录
+read-etc-hosts = true
 
 # > 自定义 GeoIP 数据库
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
