--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -28,16 +28,16 @@ read-etc-hosts = true
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 [Proxy Group]
-🚀 节点选择 = select, ♻ 自动选择, policy-path=[订阅地址], update-interval=0
-♻ 自动选择 = url-test, policy-path=[订阅地址], update-interval=0, url=http://cp.cloudflare.com/generate_204, interval=300, tolerance=50
-🍎 Apple = select, DIRECT, 🚀 节点选择
-📺 Bilibili = select, DIRECT, 🚀 节点选择
-TikTok = select, 🚀 节点选择
-🎥 Netflix = select, 🚀 节点选择
-Speedtest = select, DIRECT, 🚀 节点选择
-🌍 国际媒体 = select, 🚀 节点选择, ♻ 自动选择
+🚀 Proxy = select, ♻ Auto, policy-path=[订阅地址], update-interval=0
+♻ Auto = url-test, policy-path=[订阅地址], update-interval=0, url=http://cp.cloudflare.com/generate_204, interval=300, tolerance=50
+🍎 Apple = select, DIRECT, 🚀 Proxy
+📺 Bilibili = select, DIRECT, 🚀 Proxy
+TikTok = select, 🚀 Proxy
+🎥 Netflix = select, 🚀 Proxy
+Speedtest = select, DIRECT, 🚀 Proxy
+🌍 国际媒体 = select, 🚀 Proxy, ♻ Auto
 🛑 广告拦截 = select, DIRECT, REJECT
-🐟 漏网之鱼 = select, DIRECT, 🚀 节点选择
+🐟 漏网之鱼 = select, DIRECT, 🚀 Proxy
 🇭🇰 香港节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=香港, no-alert=0, hidden=0
 🇯🇵 日本节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=日本, no-alert=0, hidden=0
 🇺🇲 美国节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=150, update-interval=0, policy-regex-filter=美国, no-alert=0, hidden=0
@@ -53,7 +53,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list,🌍 国际媒体,update-interval=86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Advertising/Advertising.list,🛑 广告拦截,update-interval=86400
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Advertising/Advertising_Domain.list,🛑 广告拦截,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list,🚀 节点选择,update-interval=86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list,🚀 Proxy,update-interval=86400
 GEOIP,CN,DIRECT
 FINAL,🐟 漏网之鱼
 
