--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -6,67 +6,106 @@
 [General]
 # > 日志级别
 loglevel = notify
-
+show-error-page-for-reject = true
+# > 增强版 Wi-Fi 助理
+allow-wifi-access = false
+# > All Hybrid 网络并发
+all-hybrid = false
+# > IPv6 支持(默认关闭)
+ipv6 = false
+# > 测试超时(秒)
+test-timeout = 5
 # > Internet 测试 URL
-internet-test-url = http://wifi.vivo.com.cn/generate_204
-
+internet-test-url = http://www.aliyun.com
 # > 代理测速 URL
-proxy-test-url = http://cp.cloudflare.com/generate_204
-
-# > 测速超时(秒)
-test-timeout = 2
-
-# > 跳过代理
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, passenger.t3go.cn
-
-# > DNS 服务器 (如无必要不建议使用 DNS over HTTPS)
-dns-server = 119.29.29.29,system
+proxy-test-url = http://www.gstatic.com/generate_204
+# > GeoIP数据库
+geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+# > 排除简单主机名
+exclude-simple-hostnames = true
+# > DNS 服务器
+dns-server = 223.5.5.5, 119.29.29.29
+hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > 从 /etc/hosts 读取 DNS 记录
 read-etc-hosts = true
+# > 远程控制器
+http-api-web-dashboard = false
+use-default-policy-if-wifi-not-primary = false
+# > 跳过代理
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, www.baidu.com, yunbusiness.ccb.com
+# Surge VIF
+tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
+tun-included-routes = 192.168.1.12/32
+# > Always Real IP Hosts
+always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 
-# > 自定义 GeoIP 数据库
-geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+[Replica]
+# > 隐藏 Apple 请求
+hide-apple-request = false
+# > 隐藏崩溃追踪器请求
+hide-crash-reporter-request = true
+# > 隐藏 UDP 会话
+hide-udp = false
+# > 关键词过滤器
+keyword-filter-type = false
 
 [Proxy Group]
-🚀 Proxy = select, ♻ Auto, policy-path=[订阅地址], update-interval=0
-♻ Auto = url-test, policy-path=[订阅地址], update-interval=0, url=http://cp.cloudflare.com/generate_204, interval=300, tolerance=50
-🍎 Apple = select, DIRECT, 🚀 Proxy
-📺 Bilibili = select, DIRECT, 🚀 Proxy
-TikTok = select, 🚀 Proxy
-🎥 Netflix = select, 🚀 Proxy
-Speedtest = select, DIRECT, 🚀 Proxy
-🌍 国际媒体 = select, 🚀 Proxy, ♻ Auto
-🛑 广告拦截 = select, DIRECT, REJECT
-🐟 漏网之鱼 = select, DIRECT, 🚀 Proxy
-🇭🇰 香港节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=香港, no-alert=0, hidden=0
-🇯🇵 日本节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=日本, no-alert=0, hidden=0
-🇺🇲 美国节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=150, update-interval=0, policy-regex-filter=美国, no-alert=0, hidden=0
-🇨🇳 台湾节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=台湾, no-alert=0, hidden=0
-🇸🇬 新加坡节点 = url-test, policy-path=[订阅地址], url=http://cp.cloudflare.com/generate_204, interval=300, timeout=50, update-interval=0, policy-regex-filter=新加坡|狮城, no-alert=0, hidden=0
+Proxy = select, policy-path=[订阅地址], update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+Apple = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+TikTok = select, Proxy
+Telegram = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+PikPak = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+Bilibili = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇨🇳 台湾节点
+国外媒体 = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+国内媒体 = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+新浪微博 = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+Microsoft = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+Final = select, DIRECT, Proxy
+# > 外部节点
+🇭🇰 香港节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇭🇰, no-alert=0, hidden=0, include-all-proxies=0
+🇨🇳 台湾节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇨🇳, no-alert=0, hidden=0, include-all-proxies=0
+🇺🇲 美国节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇺🇸, no-alert=0, hidden=0, include-all-proxies=0
+🇯🇵 日本节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇯🇵, no-alert=0, hidden=0, include-all-proxies=0
+🇸🇬 新加坡节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇸🇬, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,🍎 Apple,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,📺 Bilibili,update-interval=86400
+# > 本地/局域网地址
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
+# > 微软服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft
+# > 苹果服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,Apple
+# > 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Weibo/Weibo.list,新浪微博
+# > TikTok
 RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Surge/TikTok.list,TikTok,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list,🎥 Netflix,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,Speedtest,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list,🌍 国际媒体,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Advertising/Advertising.list,🛑 广告拦截,update-interval=86400
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Advertising/Advertising_Domain.list,🛑 广告拦截,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list,🚀 Proxy,update-interval=86400
+# > PikPak
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/PikPak/PikPak.list,PikPak,update-interval=86400
+# > 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,Bilibili
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMedia/ChinaMedia.list,国内媒体
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,国外媒体
+# > Proxy
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy.list,Proxy
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy_Domain.list,Proxy
+# > China
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaIPs/ChinaIPs.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Download/Download.list,DIRECT
+# > GeoIP China
 GEOIP,CN,DIRECT
-FINAL,🐟 漏网之鱼
+# > DNS 查询失败走 Final 规则
+FINAL,Final,dns-failed
 
-# !name=Panels
-# !desc=信息面板模块
 [Panel]
-# 启动时长
+# > 启动时长
 SurgePro_ReloadProfile = type=generic,timeout=10,script-path=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/Surge/PanelScripts/surgepro_reloadprofile.js
-# 流媒体解锁检测
+# > 流媒体解锁检测
 stream-all = type=generic, timeout=15, script-path=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/Surge/PanelScripts/stream-all.js
 
 [Script]
-# 启动时长
+# > 启动时长
 SurgePro_ReloadProfile = script-name=SurgePro_ReloadProfile,title=启动时长,content=请刷新,update-interval=1
-# 流媒体解锁检测
+# > 流媒体解锁检测
 stream-all = script-name=stream-all, title="流媒体解锁检测", content="请刷新面板", update-interval=36000
