--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -16,7 +16,7 @@ ipv6 = false
 # > 测试超时(秒)
 test-timeout = 5
 # > Internet 测试 URL
-internet-test-url = http://www.aliyun.com
+internet-test-url = http://wifi.vivo.com.cn/generate_204
 # > 代理测速 URL
 proxy-test-url = http://www.gstatic.com/generate_204
 # > GeoIP数据库
@@ -50,7 +50,7 @@ hide-udp = false
 keyword-filter-type = false
 
 [Proxy Group]
-Proxy = select, policy-path=[订阅地址], update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+Proxy = select, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 Apple = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
 TikTok = select, Proxy
 Telegram = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
@@ -62,11 +62,11 @@ Bilibili = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇨🇳 台湾节点
 广告拦截 = select, DIRECT, REJECT
 Final = select, DIRECT, Proxy
 # > 外部节点
-🇭🇰 香港节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇭🇰, no-alert=0, hidden=0, include-all-proxies=0
-🇨🇳 台湾节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇨🇳, no-alert=0, hidden=0, include-all-proxies=0
-🇺🇲 美国节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇺🇸, no-alert=0, hidden=0, include-all-proxies=0
-🇯🇵 日本节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇯🇵, no-alert=0, hidden=0, include-all-proxies=0
-🇸🇬 新加坡节点 = url-test, policy-path=https://api.flowercloud.yt/sub?target=surge&ver=4&list=true&emoji=true&tfo=true&udp=true&url=https%3A%2F%2Fflowercloud.xyz%2Fmodules%2Fservers%2FV2raySocks%2Fosubscribe.php%3Fsid%3D3951%26token%3DVI8mLzxnCfjy%26sip002%3D1, update-interval=0, policy-regex-filter=🇸🇬, no-alert=0, hidden=0, include-all-proxies=0
+🇭🇰 香港节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇭🇰, no-alert=0, hidden=0, include-all-proxies=0
+🇨🇳 台湾节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇨🇳, no-alert=0, hidden=0, include-all-proxies=0
+🇺🇲 美国节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇺🇸, no-alert=0, hidden=0, include-all-proxies=0
+🇯🇵 日本节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇯🇵, no-alert=0, hidden=0, include-all-proxies=0
+🇸🇬 新加坡节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇸🇬, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
 # > 本地/局域网地址
