--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -62,11 +62,11 @@ Bilibili = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇨🇳 台湾节点
 AdGuard = select, DIRECT, REJECT
 Final = select, DIRECT, Proxy
 # > 外部节点
-🇭🇰 香港节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇭🇰, no-alert=0, hidden=0, include-all-proxies=0
-🇨🇳 台湾节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇨🇳, no-alert=0, hidden=0, include-all-proxies=0
-🇺🇲 美国节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇺🇸, no-alert=0, hidden=0, include-all-proxies=0
-🇯🇵 日本节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇯🇵, no-alert=0, hidden=0, include-all-proxies=0
-🇸🇬 新加坡节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, update-interval=0, policy-regex-filter=🇸🇬, no-alert=0, hidden=0, include-all-proxies=0
+🇭🇰 香港节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇭🇰, update-interval=86400
+🇨🇳 台湾节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇨🇳, update-interval=86400
+🇺🇲 美国节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇺🇸, update-interval=86400
+🇯🇵 日本节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇯🇵, update-interval=86400
+🇸🇬 新加坡节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇸🇬, update-interval=86400
 
 [Rule]
 # > 本地/局域网地址
