--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -93,7 +93,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/VirgilClyne/VirgilClyne/main/modules/ASN/ASN.China.list,DIRECT
 # > GeoIP China
 # GEOIP,CN,DIRECT
-# > DNS 查询失败走 Final 规则
+# > 最终 Final 规则
 FINAL,Final
 
 [Panel]
