--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -12,11 +12,11 @@ allow-wifi-access = false
 # > All Hybrid 网络并发
 all-hybrid = false
 # > 测试超时(秒)
-test-timeout = 2
+test-timeout = 3
 # > Internet 测试 URL
-internet-test-url = http://www.baidu.com
+internet-test-url = http://wifi.vivo.com.cn/generate_204
 # > 代理测速 URL
-proxy-test-url = http://www.google.com/generate_204
+proxy-test-url = http://cp.cloudflare.com/generate_204
 # > GeoIP数据库
 geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 # > 排除简单主机名
