--- a/loon/loon.conf
+++ b/loon/loon.conf
@@ -58,10 +58,11 @@ dl.l.google.com = server:119.29.29.29
 [Proxy]
 
 [Remote Proxy]
-花云 = https://api.flowercloud.xyz/osubscribe.php?sid=3951&token=ZdVCbCGDaNNF&sip002=1
+机场名 = 【机场订阅】
 
 [Proxy Group]
 节点选择 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
+FlowerCloud = select,机场名,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Flower.png
 苹果服务 = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
 TikTok = select,节点选择,香港节点,日本节点,韩国节点,美国节点,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
 电报消息 = select,节点选择,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
