--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -48,7 +48,9 @@ hide-udp = false
 keyword-filter-type = false
 
 [Proxy Group]
-Proxy = select, policy-path=https://sub.store/download/FlowerCloud, update-interval=86400
+Proxy = select, 【机场1】, 【机场2】
+机场1 = select, policy-path=【机场1订阅】, update-interval=86400
+机场2 = select, policy-path=【机场2订阅】, update-interval=86400
 Apple = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
 TikTok = select, Proxy, 🇯🇵 日本节点, 🇺🇲 美国节点
 Telegram = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
@@ -110,4 +112,4 @@ stream-all = type=generic, timeout=15, script-path=https://raw.githubusercontent
 # > 启动时长
 SurgePro_ReloadProfile = script-name=SurgePro_ReloadProfile,title=启动时长,content=请刷新,update-interval=1
 # > 流媒体解锁检测
-stream-all = script-name=stream-all, title="流媒体解锁检测", content="请刷新面板", update-interval=36000
+stream-all = script-name=stream-all, title="流媒体解锁检测", content="请刷新面板", update-interval=86400
