--- a/loon/loon.conf
+++ b/loon/loon.conf
@@ -22,7 +22,7 @@ wifi-access-http-port = 7222
 wifi-access-socket5-port = 7221
 
 # > 代理测速 URL
-proxy-test-url = http://www.gstatic.com/generate_204
+proxy-test-url = http://cp.cloudflare.com/generate_204
 
 # > 测速超时 (s)
 test-timeout = 3
