--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -51,7 +51,7 @@ keyword-filter-type = false
 Proxy = select, 【机场1】, 【机场2】
 机场1 = select, policy-path=【机场1订阅】, update-interval=86400
 机场2 = select, policy-path=【机场2订阅】, update-interval=86400
-Apple = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+Apple = select, DIRECT, Proxy
 TikTok = select, Proxy, 🇯🇵 日本节点, 🇺🇲 美国节点
 Telegram = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
 PikPak = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
