--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -169,6 +169,9 @@ ip6-cidr, fe80::/10, direct
 ip-cidr, 203.107.1.1/24, reject
 ip-cidr, 183.240.197.130/32, direct
 
+# 高德地图APP净化
+host, amdc.m.taobao.com, reject
+
 # Boxjs 代理
 host-keyword, jsdelivr.net, proxy
 
@@ -197,6 +200,9 @@ https://raw.githubusercontent.com/gjwj666/qx/main/kw.js, tag=酷我音乐, updat
 
 # keep破解
 https://raw.githubusercontent.com/gjwj666/qx/main/kp.js, tag=keep破解, update-interval=172800, opt-parser=true, enabled=true
+
+# 高德地图APP净化
+https://raw.githubusercontent.com/ddgksf2013/Scripts/master/amap.js, tag=高德地图APP净化, update-interval=172800, opt-parser=true, enabled=true
 
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=Sub-Store, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/yqc007/QuantumultX/master/WallCraftFProCrack.js, tag=解锁WallCraft专业版, update-interval=172800, opt-parser=true, enabled=true
