--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -202,7 +202,7 @@ https://raw.githubusercontent.com/gjwj666/qx/main/kw.js, tag=酷我音乐, updat
 https://raw.githubusercontent.com/gjwj666/qx/main/kp.js, tag=keep破解, update-interval=172800, opt-parser=true, enabled=true
 
 # 高德地图APP净化
-https://raw.githubusercontent.com/ddgksf2013/Scripts/master/amap.js, tag=高德地图APP净化, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/AdBlock/Amap.conf, tag=高德地图APP净化, update-interval=172800, opt-parser=true, enabled=true
 
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=Sub-Store, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/yqc007/QuantumultX/master/WallCraftFProCrack.js, tag=解锁WallCraft专业版, update-interval=172800, opt-parser=true, enabled=true
