--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -195,8 +195,14 @@ https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Siri.qxrewri
 # iRingo for Location Services
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Location.qxrewrite, tag=iRingo for Location Services, update-interval=86400, opt-parser=false, enabled=true
 
+# 墨鱼去开屏广告V2.0
+https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/AdBlock/StartUp.conf, tag=墨鱼去开屏广告V2.0, update-interval=172800, opt-parser=true, enabled=true
+
+#69AV
+https://raw.githubusercontent.com/gjwj666/qx/main/69sp.js, tag=69AV, update-interval=172800, opt-parser=true, enabled=true
+
 # 酷我音乐vip
-https://raw.githubusercontent.com/gjwj666/qx/main/kw.js, tag=酷我音乐, update-interval=172800, opt-parser=true, enabled=true
+https://gist.githubusercontent.com/ddgksf2013/0f76e952f0c4a2579932f45a209b40c3/raw/Kuwo.conf, tag=酷我音乐, update-interval=172800, opt-parser=true, enabled=true
 
 # keep破解
 https://raw.githubusercontent.com/gjwj666/qx/main/kp.js, tag=keep破解, update-interval=172800, opt-parser=true, enabled=true
@@ -204,11 +210,12 @@ https://raw.githubusercontent.com/gjwj666/qx/main/kp.js, tag=keep破解, update-
 # 高德地图APP净化
 https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/AdBlock/Amap.conf, tag=高德地图APP净化, update-interval=172800, opt-parser=true, enabled=true
 
+#喜马拉雅VIP
+https://raw.githubusercontent.com/WeiRen0/Scripts/main/ximalaya.js, tag=喜马拉雅vip, update-interval=172800, opt-parser=true, enabled=true
+
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=Sub-Store, update-interval=172800, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/yqc007/QuantumultX/master/WallCraftFProCrack.js, tag=解锁WallCraft专业版, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/Orz-3/QuantumultX/master/Bili_Auto_Regions.conf, tag=Bilibili换区脚本, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/TestFlightDownload.conf , tag=TestFlight区域限制解除, update-interval=172800, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/Orz-3/QuantumultX/master/Netflix_ratings.conf, tag=Netflix评分, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/AllInOne/AllInOne.conf, tag=去广告规则, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=boxjs, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrite/General.conf, tag=神机重定向, update-interval=86400, opt-parser=false, enabled=true
