--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -83,6 +83,7 @@ server=/*testflight.apple.com/8.8.4.4
 static=Apple, direct, proxy, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
 static=Bilibili, direct, 🇭🇰香港, 🇨🇳台湾, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Bilibili.png
 static=PikPak, direct, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/PikPak.png
+static=TikTok, direct, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
 static=Telegram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
 static=Instagram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Instagram.png
 static=Twitter, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Twitter.png
@@ -127,6 +128,9 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Str
 
 # PikPak
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/PikPak/PikPak.list, tag=PikPak, force-policy=PikPak, update-interval=86400, opt-parser=false, enabled=true
+
+# TikTok
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/TikTok/TikTok.list, tag=TikTok, force-policy=TikTok, update-interval=86400, opt-parser=false, enabled=true
 
 # Telegram
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=Telegram, force-policy=Telegram, update-interval=86400, opt-parser=false, enabled=true
