--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -93,12 +93,12 @@ static=Speedtest, direct, proxy, img-url=https://raw.githubusercontent.com/erdon
 static=Guard, direct, reject, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/AdBlock.png
 static=黑白名单, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/face/master/Final.png
 url-latency-benchmark=延迟最低, resource-tag-regex=FlowerCloud, server-tag-regex=^((?!(Traffic|Expire)).)*$, check-interval=1800, tolerance=10, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Auto.png
-static=🇭🇰香港, server-tag-regex=香港|HK|Hong Kong, img-url=https://raw.githubusercontent.com/Orz-3/face/master/HK.png
-static=🇨🇳台湾, server-tag-regex=台湾|TW|Taiwan, img-url=https://raw.githubusercontent.com/Orz-3/face/master/TW.png
-static=🇯🇵日本, server-tag-regex=日本|JP|Japan, img-url=https://raw.githubusercontent.com/Orz-3/face/master/JP.png
-static=🇰🇷韩国, server-tag-regex=韩国|南朝鲜|KR|Korean, img-url=https://raw.githubusercontent.com/Orz-3/face/master/KR.png
-static=🇸🇬新加坡, server-tag-regex=新加坡|狮城|SG|Singapore, img-url=https://raw.githubusercontent.com/Orz-3/face/master/SG.png
-static=🇺🇸美国, server-tag-regex=美国|US|American, img-url=https://raw.githubusercontent.com/Orz-3/face/master/US.png
+static=🇭🇰香港, server-tag-regex=🇭🇰|香港|HK|Hong Kong, img-url=https://raw.githubusercontent.com/Orz-3/face/master/HK.png
+static=🇨🇳台湾, server-tag-regex=🇨🇳|台湾|TW|Taiwan, img-url=https://raw.githubusercontent.com/Orz-3/face/master/TW.png
+static=🇯🇵日本, server-tag-regex=🇯🇵|日本|JP|Japan, img-url=https://raw.githubusercontent.com/Orz-3/face/master/JP.png
+static=🇰🇷韩国, server-tag-regex=🇰🇷|韩国|南朝鲜|KR|Korean, img-url=https://raw.githubusercontent.com/Orz-3/face/master/KR.png
+static=🇸🇬新加坡, server-tag-regex=🇸🇬|新加坡|狮城|SG|Singapore, img-url=https://raw.githubusercontent.com/Orz-3/face/master/SG.png
+static=🇺🇸美国, server-tag-regex=🇺🇸|美国|US|United States, img-url=https://raw.githubusercontent.com/Orz-3/face/master/US.png
 
 # 本地服务器部分
 [server_local]
