--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -85,14 +85,15 @@ server=/*testflight.apple.com/8.8.4.4
 static=Apple, direct, proxy, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
 static=Bilibili, direct, 🇭🇰香港, 🇨🇳台湾, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Bilibili.png
 static=OpenAI, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
+static=Netflix, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Netflix.png
+static=TikTok, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
+static=Youtube, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 static=PikPak, direct, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/other/PikPak.png
-static=TikTok, direct, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
 static=Telegram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
 static=Instagram, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Instagram.png
 static=Twitter, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Twitter.png
 static=国际媒体, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/shoujiqiyuan/PokemonGOforQuanX/master/IconSet/150.png
 static=全球加速, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/shoujiqiyuan/PokemonGOforQuanX/master/IconSet/149.png
-static=Speedtest, direct, proxy, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Speedtest.png
 static=Guard, direct, reject, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/AdBlock.png
 static=黑白名单, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/face/master/Final.png
 url-latency-benchmark=延迟最低, resource-tag-regex=FlowerCloud, server-tag-regex=^((?!(Traffic|Expire)).)*$, check-interval=1800, tolerance=10, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Auto.png
@@ -135,11 +136,17 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Str
 # OpenAI
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, tag=OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=true, enabled=true
 
-# PikPak
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/PikPak/PikPak.list, tag=PikPak, force-policy=PikPak, update-interval=86400, opt-parser=false, enabled=true
+# Netflix
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Netflix/Netflix.list, tag=Netflix, force-policy=Netflix, update-interval=172800, opt-parser=true, enabled=true
 
 # TikTok
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/TikTok/TikTok.list, tag=TikTok, force-policy=TikTok, update-interval=86400, opt-parser=false, enabled=true
+
+# Youtube
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/YouTube/YouTube.list, tag=Youtube, force-policy=Youtube, update-interval=86400, opt-parser=false, enabled=true
+
+# PikPak
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/PikPak/PikPak.list, tag=PikPak, force-policy=PikPak, update-interval=86400, opt-parser=false, enabled=true
 
 # Telegram
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=Telegram, force-policy=Telegram, update-interval=86400, opt-parser=false, enabled=true
