--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -185,6 +185,9 @@ ip6-cidr, fe80::/10, direct
 ip-cidr, 203.107.1.1/24, reject
 ip-cidr, 183.240.197.130/32, direct
 
+# Nexitally
+host, sub.nexconvert.com, direct
+
 # 高德地图APP净化
 host, amdc.m.taobao.com, reject
 
