--- a/loon/Loon.conf
+++ b/loon/Loon.conf
@@ -5,18 +5,22 @@
 # Loon规则GitHub：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Loon
 
 [General]
-# > IPv6 支持
-ipv6 = false
+# > 解析器
+resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
 
-# > 跳过某个域名或者IP段
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, passenger.t3go.cn,passenger.t3go.cn
-bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
+# > IPv6支持（默认开启）
+ipv6 = true
+
+# > 跳过代理
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com,www.baidu.com,yunbusiness.ccb.com
+
+# > 旁路隧道
+bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
 # > DNS 服务器
 dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
 
-# > 允许 Wi-Fi 网络下其它设备访问
-allow-udp-proxy = false
+# > 允许 wifi 访问
 allow-wifi-access = false
 wifi-access-http-port = 7222
 wifi-access-socket5-port = 7221
@@ -29,9 +33,6 @@ test-timeout = 3
 
 # > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
 real-ip = msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
-
-# > 解析器
-resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
 
 [Host]
 *.taobao.com = server:223.5.5.5
@@ -62,7 +63,6 @@ dl.l.google.com = server:119.29.29.29
 
 [Proxy Group]
 节点选择 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
-FlowerCloud = select,机场名,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Flower.png
 苹果服务 = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
 TikTok = select,节点选择,香港节点,日本节点,韩国节点,美国节点,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
 电报消息 = select,节点选择,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
