--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -48,23 +48,22 @@ hide-udp = false
 keyword-filter-type = false
 
 [Proxy Group]
-Proxy = select, 【机场1】, 【机场2】
+Proxy = select, 【机场1】
 机场1 = select, policy-path=【机场1订阅】, update-interval=86400
-机场2 = select, policy-path=【机场2订阅】, update-interval=86400
 Apple = select, DIRECT, Proxy
-TikTok = select, Proxy, 🇯🇵 日本节点, 🇺🇲 美国节点
-Telegram = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
-PikPak = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
-Bilibili = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇨🇳 台湾节点
-Weibo = select, DIRECT, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
-国外媒体 = select, Proxy, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
+TikTok = select, Proxy, 🇯🇵 日本, 🇺🇲 美国
+Telegram = select, Proxy, 🇭🇰 香港, 🇺🇲 美国, 🇸🇬 新加坡, 🇯🇵 日本, 🇨🇳 台湾
+PikPak = select, Proxy, 🇭🇰 香港, 🇺🇲 美国, 🇸🇬 新加坡, 🇯🇵 日本, 🇨🇳 台湾
+Bilibili = select, DIRECT, Proxy, 🇭🇰 香港, 🇨🇳 台湾
+Weibo = select, DIRECT, Proxy, 🇭🇰 香港, 🇺🇲 美国, 🇸🇬 新加坡, 🇯🇵 日本, 🇨🇳 台湾
+国外媒体 = select, Proxy, 🇭🇰 香港, 🇺🇲 美国, 🇸🇬 新加坡, 🇯🇵 日本, 🇨🇳 台湾
 Guard = select, DIRECT, REJECT
 Final = select, DIRECT, Proxy
-🇭🇰 香港节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇭🇰, update-interval=86400
-🇨🇳 台湾节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇨🇳, update-interval=86400
-🇺🇲 美国节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=美国, update-interval=86400
-🇯🇵 日本节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇯🇵, update-interval=86400
-🇸🇬 新加坡节点 = url-test, policy-path=https://sub.store/download/FlowerCloud, policy-regex-filter=🇸🇬, update-interval=86400
+🇭🇰 香港 = select, policy-path=【机场1订阅】, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400
+🇨🇳 台湾 = select, policy-path=【机场1订阅】, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400
+🇯🇵 日本 = select, policy-path=【机场1订阅】, policy-regex-filter=🇯🇵|日本|JP|Japan, update-interval=86400
+🇺🇲 美国 = select, policy-path=【机场1订阅】, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400
+🇸🇬 新加坡 = select, policy-path=【机场1订阅】, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400
 
 [Rule]
 # > 苹果服务
