--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -244,4 +244,4 @@ skip_validating_cert = true
 passphrase =
 p12 =
 
-hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,as.xiaojukeji.com, as.xiaojukeji.com, wq.jd.com, api.m.jd.com, -*snssdk.com, -*amemv.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, duckduckgo.com, boxer.baidu.com, pan.baidu.com
+hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,as.xiaojukeji.com, as.xiaojukeji.com, wq.jd.com, api.m.jd.com, -*snssdk.com, -*amemv.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, duckduckgo.com, boxer.baidu.com, pan.baidu.com, -buy.itunes.apple.com
