--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -52,18 +52,20 @@ Proxy = select, 【机场】
 机场 = select, policy-path=【机场订阅】, update-interval=86400
 Apple = select, DIRECT, Proxy
 Bilibili = select, DIRECT, Proxy, 🇭🇰 香港, 🇨🇳 台湾
-Telegram = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国
-TikTok = select, Proxy, 🇯🇵 日本, 🇺🇲 美国
-PikPak = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国
-Google = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国
-国外媒体 = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国
+Telegram = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国
+TikTok = select, Proxy, 🇯🇵 日本, 🇺🇸 美国
+Instagram = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国
+Twitter = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国
+PikPak = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国
+Google = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国
+国外媒体 = select, Proxy, 🇭🇰 香港, 🇨🇳 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国
 Guard = select, DIRECT, REJECT
 Final = select, DIRECT, Proxy
 🇭🇰 香港 = select, policy-path=【机场订阅】, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400
 🇨🇳 台湾 = select, policy-path=【机场订阅】, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400
 🇸🇬 新加坡 = select, policy-path=【机场订阅】, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400
 🇯🇵 日本 = select, policy-path=【机场订阅】, policy-regex-filter=🇯🇵|日本|JP|Japan, update-interval=86400
-🇺🇲 美国 = select, policy-path=【机场订阅】, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400
+🇺🇸 美国 = select, policy-path=【机场订阅】, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400
 
 [Rule]
 # > 苹果服务
@@ -75,9 +77,9 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # > TikTok
 RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Surge/TikTok.list,TikTok
 # > Instagram
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Instagram/Instagram.list
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Instagram/Instagram.list,Instagram
 # > Twitter
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,Twitter
 # > PikPak
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/PikPak/PikPak.list,PikPak
 # > 流媒体
