--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -105,7 +105,7 @@ IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 # > 局域网地址
 RULE-SET,LAN,DIRECT
 # > ASN
-RULE-SET,https://raw.githubusercontent.com/VirgilClyne/VirgilClyne/main/modules/ASN/ASN.China.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list,DIRECT
 # > GeoIP China
 # GEOIP,CN,DIRECT
 # > DNS 查询失败走 Final 规则
