--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -216,11 +216,15 @@ https://raw.githubusercontent.com/app2smile/rules/master/module/bilibili-qx.conf
 
 # 本地复写规则
 [rewrite_local]
+# 高德地图打车签到
+^https:\/\/m5(-zb)?\.amap\.com\/ws\/yuece\/(act|openapi)\/(activity\/current\/)?query url script-response-body https://raw.githubusercontent.com/wf021325/qx/master/task/ampDache.js
+
 #阿里云盘签到cookie
 ^https:\/\/auth.aliyundrive.com\/v2\/account\/token url script-response-body https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js
 
 # 构造请求,脚本区,自行找库添加
 [task_local]
+0 0 10 * * ? https://raw.githubusercontent.com/wf021325/qx/master/task/ampDache.js, tag=高德地图打车签到, img-url=https://raw.githubusercontent.com/Crazy-Z7/Task/main/Image/IMG_0967.jpeg, enabled=true
 event-interaction https://raw.githubusercontent.com/getsomecat/Qx/main/Net_Speed.js, tag=⚡NetSpeed, img-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Auto_Speed.png, enabled=true
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/server-info-plus.js, tag=节点信息Plus, img-url=info.bubble.system.system, enabled=true
 
@@ -244,4 +248,4 @@ skip_validating_cert = true
 passphrase =
 p12 =
 
-hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,as.xiaojukeji.com, as.xiaojukeji.com, wq.jd.com, api.m.jd.com, -*snssdk.com, -*amemv.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, duckduckgo.com, boxer.baidu.com, pan.baidu.com, -buy.itunes.apple.com
+hostname= rdcseason.m.jd.com, *.googlevideo.com, trade-acs.m.taobao.com,as.xiaojukeji.com, as.xiaojukeji.com, wq.jd.com, api.m.jd.com, -*snssdk.com, -*amemv.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, duckduckgo.com, boxer.baidu.com, *.kuwo.cn, pan.baidu.com,auth.aliyundrive.com,-buy.itunes.apple.com,m5.amap.com,-g.alicdn.com
