--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -85,6 +85,7 @@ server=/*testflight.apple.com/8.8.4.4
 static=Apple, direct, proxy, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Apple.png
 static=Bilibili, direct, 🇭🇰香港, 🇨🇳台湾, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Bilibili.png
 static=OpenAI, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
+static=Emby, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Emby.png
 static=Netflix, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Netflix.png
 static=TikTok, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Tiktok.png
 static=Youtube, proxy, 🇭🇰香港, 🇨🇳台湾, 🇯🇵日本, 🇸🇬新加坡, 🇺🇸美国, 🇰🇷韩国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
@@ -134,6 +135,9 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Str
 
 # OpenAI
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, tag=OpenAI, force-policy=OpenAI, update-interval=172800, opt-parser=true, enabled=true
+
+# Emby
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Emby/Emby.list, tag=Emby, force-policy=Emby, update-interval=172800, opt-parser=true, enabled=true
 
 # Netflix
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Netflix/Netflix.list, tag=Netflix, force-policy=Netflix, update-interval=172800, opt-parser=true, enabled=true
